[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/game.gd" type="Script" id=1]
[ext_resource path="res://textures/game_background.png" type="Texture" id=2]
[ext_resource path="res://textures/field.png" type="Texture" id=3]
[ext_resource path="res://scenes/racket.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/frame.png" type="Texture" id=6]
[ext_resource path="res://fonts/big_score_numbers.tres" type="DynamicFont" id=7]
[ext_resource path="res://textures/logo_small.png" type="Texture" id=8]
[ext_resource path="res://textures/mlp_facade.png" type="Texture" id=9]
[ext_resource path="res://music/game.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Color"
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.713726, 0.788235, 0.0666667, 1 ), Color( 1, 0.427451, 0.294118, 1 ), Color( 0.294118, 0.588235, 1, 1 ), Color( 0.109804, 0.737255, 0.25098, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 53 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 65, 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Background" type="Sprite" parent="."]
editor/display_folded = true
self_modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
autoplay = "Color"
anims/Color = SubResource( 1 )

[node name="FieldLines" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Limits" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="TopLeft" type="Position2D" parent="Limits"]
position = Vector2( 36, 41 )

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 159, 147 )

[node name="WallLeft" type="StaticBody2D" parent="Limits"]
position = Vector2( 25, 94 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/WallLeft"]
visible = false
shape = SubResource( 2 )

[node name="WallRight" type="StaticBody2D" parent="Limits"]
position = Vector2( 170, 94 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/WallRight"]
visible = false
shape = SubResource( 2 )

[node name="Racket1" parent="." instance=ExtResource( 4 )]
position = Vector2( 74, 45 )
motion/sync_to_physics = false

[node name="Racket2" parent="." instance=ExtResource( 4 )]
position = Vector2( 115, 143 )
motion/sync_to_physics = false

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 96, 94 )

[node name="Frame" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Score1" type="Label" parent="."]
margin_left = 108.113
margin_top = 8.93991
margin_right = 123.113
margin_bottom = 35.9399
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="Score2" type="Label" parent="."]
margin_left = 72.7639
margin_top = 8.65382
margin_right = 87.7639
margin_bottom = 35.6538
custom_fonts/font = ExtResource( 7 )
text = "2"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 96, 7 )
texture = ExtResource( 8 )

[node name="Facade" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false

[node name="Goal2" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 97, 153 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal2"]
shape = SubResource( 3 )

[node name="Goal1" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 97, 35 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal1"]
shape = SubResource( 3 )

[node name="FinalTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
[connection signal="joystick1" from="." to="Racket1" method="_on_Game_joystick"]
[connection signal="joystick2" from="." to="Racket2" method="_on_Game_joystick"]
[connection signal="timeout" from="Timer" to="Ball" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Goal2" to="." method="_on_body_entered" binds= [ 2 ]]
[connection signal="body_entered" from="Goal1" to="." method="_on_body_entered" binds= [ 1 ]]
[connection signal="timeout" from="FinalTimer" to="." method="_final_Timer_timeout"]
